--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
 name: Deploy Terminal Config
 on:
   push:
-    branches: [ main ]
+    branches: [ update_conf ]
+  workflow_dispatch:
+
 
 jobs:
   deploy:
